--- a/Learn Form Validation by Building a Calorie Counter/styles.css
+++ b/Learn Form Validation by Building a Calorie Counter/styles.css
@@ -1,185 +1,87 @@
-@media (prefers-reduced-motion: no-preference) {
-  * {
-    scroll-behavior: smooth;
-  }
+:root {
+  --light-grey: #f5f6f7;
+  --dark-blue: #0a0a23;
+  --fcc-blue: #1b1b32;
+  --light-yellow: #fecc4c;
+  --dark-yellow: #feac32;
+  --light-pink: #ffadad;
+  --dark-red: #850000;
+  --light-green: #acd157;
 }
 
 body {
-  background: #f5f6f7;
-  color: #1b1b32;
-  font-family: Helvetica;
-  margin: 0;
-}
-
-header {
-  width: 100%;
-  height: 50px;
-  background-color: #1b1b32;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  top: 0;
-}
-
-#logo {
-  width: max(10rem, 18vw);
-  background-color: #0a0a23;
-  aspect-ratio: 35 / 4;
-  padding: 0.4rem;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  background-color: var(--fcc-blue);
+  color: var(--light-grey);
 }
 
 h1 {
-  color: #f1be32;
-  font-size: min(5vw, 1.2em);
   text-align: center;
 }
 
-nav {
-  width: 50%;
-  max-width: 300px;
-  height: 50px;
-}
-
-nav > ul {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  align-items: center;
-  padding-inline-start: 0;
-  margin-block: 0;
-  height: 100%;
-}
-
-nav > ul > li {
-  color: #dfdfe2;
-  margin: 0 0.2rem;
-  padding: 0.2rem;
-  display: block;
-}
-
-nav > ul > li:hover {
-  background-color: #dfdfe2;
-  color: #1b1b32;
-  cursor: pointer;
-}
-
-li > a {
-  color: inherit;
-  text-decoration: none;
-}
-
-main {
-  padding-top: 50px;
-}
-
-section {
-  width: 80%;
-  margin: 0 auto 10px auto;
-  max-width: 600px;
+.container {
+  width: 90%;
+  max-width: 680px;
 }
 
 h1,
-h2 {
-  font-family: Verdana, Tahoma;
+.container,
+.output {
+  margin: 20px auto;
 }
 
-h2 {
-  border-bottom: 4px solid #dfdfe2;
-  margin-top: 0px;
-  padding-top: 60px;
+label,
+legend {
+  font-weight: bold;
 }
 
-.info {
-  padding: 10px 0 0 5px;
-}
-
-.formrow {
-  margin-top: 30px;
-  padding: 0px 15px;
-}
-
-input {
-  font-size: 16px;
-}
-
-.info label, .info input {
-  display: inline-block;
-}
-
-.info input {
-  width: 50%;
-  text-align: left;
-}
-
-.info label {
-  width: 10%;
-  min-width: 55px;
-  text-align: right;
-}
-
-.question-block {
-  text-align: left;
-  display: block;
-  width: 100%;
-  margin-top: 20px;
-  padding-top: 5px;
-}
-
-p {
-  margin-top: 5px;
-  padding-left: 15px;
-  font-size: 20px;
-}
-
-p::before {
-  content: "Question #";
-}
-
-.question {
-  border: none;
-  padding-bottom: 0;
-}
-
-.answers-list {
-  list-style: none;
-  padding: 0;
+.input-container {
+  display: flex;
+  flex-direction: column;
 }
 
 button {
-  display: block;
-  margin: 40px auto;
-  width: 40%;
-  padding: 15px;
-  font-size: 23px;
-  background: #d0d0d5;
-  border: 3px solid #3b3b4f;
+  cursor: pointer;
+  text-decoration: none;
+  background-color: var(--light-yellow);
+  border: 2px solid var(--dark-yellow);
 }
 
-footer {
-  background-color: #2a2a40;
-  display: flex;
-  justify-content: center;
+button,
+input,
+select {
+  min-height: 24px;
+  color: var(--dark-blue);
 }
 
-footer,
-footer a {
-  color: #dfdfe2;
+fieldset,
+label,
+button,
+input,
+select {
+  margin-bottom: 10px;
 }
 
-address {
+.output {
+  border: 2px solid var(--light-grey);
+  padding: 10px;
   text-align: center;
-  padding: 0.3em;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
+.hide {
+  display: none;
+}
+
+.output span {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.surplus {
+  color: var(--light-pink);
+}
+
+.deficit {
+  color: var(--light-green);
 }
