--- a/Learn the Date Object by Building a Date Formatter/styles.css
+++ b/Learn the Date Object by Building a Date Formatter/styles.css
@@ -1,185 +1,103 @@
-@media (prefers-reduced-motion: no-preference) {
-  * {
-    scroll-behavior: smooth;
-  }
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --dark-grey: #0a0a23;
+  --white: #ffffff;
+  --yellow: #f1be32;
 }
 
 body {
-  background: #f5f6f7;
-  color: #1b1b32;
-  font-family: Helvetica;
-  margin: 0;
+  color: var(--white);
+  background-color: var(--dark-grey);
 }
 
-header {
-  width: 100%;
-  height: 50px;
-  background-color: #1b1b32;
+.title-container {
+  margin: 10px 0;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  position: fixed;
-  top: 0;
-}
-
-#logo {
-  width: max(10rem, 18vw);
-  background-color: #0a0a23;
-  aspect-ratio: 35 / 4;
-  padding: 0.4rem;
-}
-
-h1 {
-  color: #f1be32;
-  font-size: min(5vw, 1.2em);
-  text-align: center;
-}
-
-nav {
-  width: 50%;
-  max-width: 300px;
-  height: 50px;
-}
-
-nav > ul {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  align-items: center;
-  padding-inline-start: 0;
-  margin-block: 0;
-  height: 100%;
-}
-
-nav > ul > li {
-  color: #dfdfe2;
-  margin: 0 0.2rem;
-  padding: 0.2rem;
-  display: block;
-}
-
-nav > ul > li:hover {
-  background-color: #dfdfe2;
-  color: #1b1b32;
-  cursor: pointer;
-}
-
-li > a {
-  color: inherit;
-  text-decoration: none;
-}
-
-main {
-  padding-top: 50px;
-}
-
-section {
-  width: 80%;
-  margin: 0 auto 10px auto;
-  max-width: 600px;
-}
-
-h1,
-h2 {
-  font-family: Verdana, Tahoma;
-}
-
-h2 {
-  border-bottom: 4px solid #dfdfe2;
-  margin-top: 0px;
-  padding-top: 60px;
-}
-
-.info {
-  padding: 10px 0 0 5px;
-}
-
-.formrow {
-  margin-top: 30px;
-  padding: 0px 15px;
-}
-
-input {
-  font-size: 16px;
-}
-
-.info label, .info input {
-  display: inline-block;
-}
-
-.info input {
-  width: 50%;
-  text-align: left;
-}
-
-.info label {
-  width: 10%;
-  min-width: 55px;
-  text-align: right;
-}
-
-.question-block {
-  text-align: left;
-  display: block;
-  width: 100%;
-  margin-top: 20px;
-  padding-top: 5px;
-}
-
-p {
-  margin-top: 5px;
-  padding-left: 15px;
-  font-size: 20px;
-}
-
-p::before {
-  content: "Question #";
-}
-
-.question {
-  border: none;
-  padding-bottom: 0;
-}
-
-.answers-list {
-  list-style: none;
-  padding: 0;
-}
-
-button {
-  display: block;
-  margin: 40px auto;
-  width: 40%;
-  padding: 15px;
-  font-size: 23px;
-  background: #d0d0d5;
-  border: 3px solid #3b3b4f;
-}
-
-footer {
-  background-color: #2a2a40;
-  display: flex;
   justify-content: center;
+  gap: 8px;
 }
 
-footer,
-footer a {
-  color: #dfdfe2;
+.title {
+  font-size: 2.5rem;
 }
 
-address {
-  text-align: center;
-  padding: 0.3em;
+.date-svg {
+  width: 30px;
+  height: 30px;
 }
 
-.sr-only {
+.divider {
+  margin: auto;
+  width: 150px;
+  height: 10px;
+  background-color: var(--yellow);
+}
+
+.dropdown-container {
+  width: 50%;
+  margin: 40px auto;
+  position: relative;
+}
+
+select {
+  display: block;
+  margin: 20px auto 0;
+  width: 100%;
+  height: 50px;
+  font-size: 100%;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: var(--white);
+  border: none;
+  color: var(--dark-grey);
+  appearance: none;
+  padding: 10px;
+  padding-right: 38px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  transition: color 0.3s ease, background-color 0.3s ease,
+    border-bottom-color 0.3s ease;
+}
+
+.select-icon {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
+  top: 4px;
+  right: 4px;
+  width: 30px;
+  height: 36px;
+  pointer-events: none;
+  padding-left: 5px;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.select-icon svg.icon {
+  transition: fill 0.3s ease;
+  fill: var(--dark-grey);
+}
+
+#current-date {
+  font-size: 2rem;
+  text-align: center;
+}
+
+@media (max-width: 375px) {
+  .title {
+    font-size: 2rem;
+  }
+
+  .dropdown-container {
+    width: 80%;
+  }
+
+  .date-svg {
+    display: none;
+  }
 }
