--- a/Learn Basic Algorithmic Thinking by Building a Number Sorter/styles.css
+++ b/Learn Basic Algorithmic Thinking by Building a Number Sorter/styles.css
@@ -1,185 +1,139 @@
-@media (prefers-reduced-motion: no-preference) {
-  * {
-    scroll-behavior: smooth;
-  }
+:root {
+  --gray-00: #ffffff;
+  --gray-05: #f5f6f7;
+  --gray-15: #d0d0d5;
+  --gray-75: #3b3b4f;
+  --gray-85: #1b1b32;
+  --gray-90: #0a0a23;
+  --blue-50: #198eee;
+  --error: #a94442;
+  --danger-color: #850000;
+  --danger-background: #ffadad;
+}
+
+*,
+::before,
+::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-  background: #f5f6f7;
-  color: #1b1b32;
-  font-family: Helvetica;
-  margin: 0;
-}
-
-header {
-  width: 100%;
-  height: 50px;
-  background-color: #1b1b32;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  top: 0;
-}
-
-#logo {
-  width: max(10rem, 18vw);
-  background-color: #0a0a23;
-  aspect-ratio: 35 / 4;
-  padding: 0.4rem;
-}
-
-h1 {
-  color: #f1be32;
-  font-size: min(5vw, 1.2em);
-  text-align: center;
-}
-
-nav {
-  width: 50%;
-  max-width: 300px;
-  height: 50px;
-}
-
-nav > ul {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  align-items: center;
-  padding-inline-start: 0;
-  margin-block: 0;
-  height: 100%;
-}
-
-nav > ul > li {
-  color: #dfdfe2;
-  margin: 0 0.2rem;
-  padding: 0.2rem;
-  display: block;
-}
-
-nav > ul > li:hover {
-  background-color: #dfdfe2;
-  color: #1b1b32;
-  cursor: pointer;
-}
-
-li > a {
-  color: inherit;
-  text-decoration: none;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  background-color: var(--gray-85);
+  color: var(--gray-05);
 }
 
 main {
-  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-section {
-  width: 80%;
-  margin: 0 auto 10px auto;
-  max-width: 600px;
-}
-
-h1,
-h2 {
-  font-family: Verdana, Tahoma;
+h1 {
+  margin: 30px auto;
 }
 
 h2 {
-  border-bottom: 4px solid #dfdfe2;
-  margin-top: 0px;
-  padding-top: 60px;
+  margin-bottom: 15px;
 }
 
-.info {
-  padding: 10px 0 0 5px;
-}
-
-.formrow {
-  margin-top: 30px;
-  padding: 0px 15px;
-}
-
-input {
-  font-size: 16px;
-}
-
-.info label, .info input {
-  display: inline-block;
-}
-
-.info input {
-  width: 50%;
-  text-align: left;
-}
-
-.info label {
-  width: 10%;
-  min-width: 55px;
-  text-align: right;
-}
-
-.question-block {
-  text-align: left;
-  display: block;
+form {
   width: 100%;
-  margin-top: 20px;
-  padding-top: 5px;
+  text-align: center;
+  padding: 15px;
 }
 
-p {
-  margin-top: 5px;
-  padding-left: 15px;
-  font-size: 20px;
+fieldset {
+  border: 0 none;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-p::before {
-  content: "Question #";
+fieldset div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.question {
-  border: none;
-  padding-bottom: 0;
+.bracket,
+.comma {
+  font-size: 2.3em;
 }
 
-.answers-list {
-  list-style: none;
-  padding: 0;
+form .comma {
+  margin-left: 2px;
+}
+
+select {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  height: 38px;
+  width: 50px;
+  text-align: center;
 }
 
 button {
-  display: block;
-  margin: 40px auto;
-  width: 40%;
-  padding: 15px;
+  cursor: pointer;
+  margin-top: 15px;
+  text-decoration: none;
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border: 3px solid #feac32;
+  padding: 10px 16px;
   font-size: 23px;
-  background: #d0d0d5;
-  border: 3px solid #3b3b4f;
+  width: 100%;
 }
 
-footer {
-  background-color: #2a2a40;
-  display: flex;
-  justify-content: center;
+select:focus-visible,
+button:focus-visible {
+  outline: 3px solid var(--blue-50);
 }
 
-footer,
-footer a {
-  color: #dfdfe2;
-}
-
-address {
+.output-container {
+  width: 95%;
+  min-height: 55px;
+  margin-top: 25px;
+  border-radius: 0;
+  padding: 15px;
+  overflow-wrap: break-word;
   text-align: center;
-  padding: 0.3em;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
+.output-array {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.output-value {
+  font-size: 2em;
+}
+
+.alert {
+  background-color: var(--danger-background);
+  border: 3px solid var(--danger-color);
+  color: var(--danger-color);
+}
+
+@media (min-width: 550px) {
+  form,
+  .output-container {
+    max-width: 480px;
+  }
+
+  fieldset {
+    max-width: 400px;
+  }
+
+  .output-array {
+    max-width: 420px;
+  }
 }
