--- a/Learn Fetch and Promises by Building an fCC Authors Page/styles.css
+++ b/Learn Fetch and Promises by Building an fCC Authors Page/styles.css
@@ -1,63 +1,72 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --main-bg-color: #1b1b32;
+  --light-grey: #f5f6f7;
+  --dark-purple: #5a01a7;
+  --golden-yellow: #feac32;
+}
+
 body {
-    font-family: Verdana, sans-serif;
-    background-color: #35136b;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  background-color: var(--main-bg-color);
+  text-align: center;
 }
 
-main {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 90%;
-    max-width: 600px;
-    text-align: center;
+.title {
+  color: var(--light-grey);
+  margin: 20px 0;
 }
 
-h1 {
-    color: #333;
+#author-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
+.user-card {
+  border-radius: 15px;
+  width: 300px;
+  height: 350px;
+  background-color: var(--light-grey);
+  margin: 20px;
 }
 
-input {
-    width: calc(100% - 22px);
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    display: block; 
-    margin-left: auto; 
-    margin-right: auto; 
+.user-img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
 }
 
-button {
-    background-color: #722be3;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    display: inline-block;
+.purple-divider {
+  background-color: var(--dark-purple);
+  width: 100%;
+  height: 15px;
 }
 
-button:hover {
-    background-color: #35136b;
+.author-name {
+  margin: 10px;
 }
 
-#result {
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #555;
+.bio {
+  margin: 20px;
+}
+
+.error-msg {
+  color: var(--light-grey);
+}
+
+.btn {
+  cursor: pointer;
+  width: 200px;
+  margin: 10px;
+  color: var(--main-bg-color);
+  font-size: 14px;
+  background-color: var(--golden-yellow);
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border-color: var(--golden-yellow);
+  border-width: 3px;
 }
